<resources>
    <string name="app_name">Thinn</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="main_label_cal_consumed">Calories consumed</string>
    <string name="main_label_cal_left">Calories left</string>
    <string name="main_cal_placeholder">2340</string>
    <string name="main_label_cal_daily">Daily Calories</string>
    <string name="main_label_cal_deficit">Calorie deficit</string>
    <string name="main_label_cal_surplus">Calorie surplus</string>
    <string name="main_label_base_mbr">BMR</string>
    <string name="main_label_tdee">TDEE</string>
    <string name="main_button_consume">Consume</string>
    <string name="main_button_undo">Undo</string>
    <string name="main_button_add_meal">Add Meal</string>
    <string name="recyclerview_item_card_name_placeholder">Lappings Döner</string>
    <string name="thinn_pref">thinn_pref</string>
    <string name="settings_label_sex">Sex</string>
    <string name="settings_radio_button_male">Male</string>
    <string name="settings_radio_button_female">Female</string>
    <string name="settings_label_age">Age</string>
    <string name="settings_label_height">Height</string>
    <string name="settings_label_weight">Weight</string>
    <string name="settings_label_neck">Neck Circumference</string>
    <string name="settings_label_waist">Waist Circumference</string>
    <string name="settings_label_hip">Hip Circumference</string>
    <string name="settings_label_activity">Activity Level</string>
    <string-array name="activity_levels">
        <item>Sedentary (1-2x/week)</item>
        <item>Light (2-3x/week)</item>
        <item>Moderate (3-5x/week)</item>
        <item>Very Active (6-7x/week)</item>
        <item>Extra Active (2x/day)</item>
    </string-array>
    <string name="settings_label_deficit">Calorie Deficit</string>
    <string name="settings_button_save">Save</string>
    <string name="main_label_remaining">remaining today</string>
    <string name="main_consumed_suffix">" consumed"</string>
    <string name="main_goal_suffix">" goal"</string>
    <string name="main_label_meals">Meals</string>
    <string name="main_label_food">Food</string>
    <string name="main_label_drinks">Drinks</string>
    <string name="main_button_add">+</string>
    <string name="main_button_delete">✕</string>
    <string name="dialog_title_add_meal">New Meal</string>
    <string name="dialog_title_edit_meal">Edit Meal</string>
    <string name="dialog_button_save">Save</string>
    <string name="main_swipe_hint">swipe for settings</string>
</resources>
