<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="user"
            type="ludwig.samuel.thinn.data.User" />

        <variable
            name="stats"
            type="ludwig.samuel.thinn.data.Stats" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPaleAccent">

        <!-- Top bar: app name + swipe hint -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingTop="@dimen/spacing_xl"
            android:paddingStart="@dimen/spacing_lg"
            android:paddingEnd="@dimen/spacing_lg">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/app_name"
                android:textColor="@color/colorMuted"
                android:textSize="@dimen/text_body" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_swipe_hint"
                android:textColor="@color/colorBorder"
                android:textSize="@dimen/text_label" />

        </LinearLayout>

        <!-- Hero section: remaining calories -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/spacing_lg"
            android:paddingBottom="@dimen/spacing_sm">

            <TextView
                android:id="@+id/main_hero_remaining"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{String.valueOf(stats.caloriesLeft)}"
                android:textColor="@color/colorForeground"
                android:textSize="@dimen/text_hero"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_label_remaining"
                android:textColor="@color/colorMuted"
                android:textSize="@dimen/text_button" />

        </LinearLayout>

        <!-- Segmented progress bar -->
        <ludwig.samuel.thinn.ui.SegmentedProgressBar
            android:id="@+id/main_progressbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/progress_height"
            android:layout_marginStart="@dimen/spacing_lg"
            android:layout_marginEnd="@dimen/spacing_lg" />

        <!-- Context row: consumed + goal -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="@dimen/spacing_lg"
            android:paddingEnd="@dimen/spacing_lg"
            android:paddingTop="@dimen/spacing_sm"
            android:paddingBottom="@dimen/spacing_md">

            <TextView
                android:id="@+id/main_consumed_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@{String.valueOf(stats.caloriesConsumed) + @string/main_consumed_suffix}"
                android:textColor="@color/colorMuted"
                android:textSize="@dimen/text_label" />

            <TextView
                android:id="@+id/main_goal_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{String.valueOf(user.dailyCalories) + @string/main_goal_suffix}"
                android:textColor="@color/colorMuted"
                android:textSize="@dimen/text_label" />

        </LinearLayout>

        <!-- Stat cards row -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/stat_card_height_sm"
            android:orientation="horizontal"
            android:paddingStart="@dimen/spacing_lg"
            android:paddingEnd="@dimen/spacing_lg">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/spacing_sm"
                android:background="@drawable/card_border"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/main_daily_cal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{String.valueOf(user.dailyCalories)}"
                    android:textColor="@color/colorForeground"
                    android:textSize="@dimen/text_value"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_label_cal_daily"
                    android:textColor="@color/colorMuted"
                    android:textSize="@dimen/text_label" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/spacing_xs"
                android:layout_marginEnd="@dimen/spacing_xs"
                android:background="@drawable/card_border"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/main_cal_deficit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{String.valueOf(user.deficit)}"
                    android:textColor="@color/colorForeground"
                    android:textSize="@dimen/text_value"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/main_label_cal_deficit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_label_cal_deficit"
                    android:textColor="@color/colorMuted"
                    android:textSize="@dimen/text_label" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/spacing_sm"
                android:background="@drawable/card_border"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/fragment_main_tdee"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{String.valueOf(user.tdee)}"
                    android:textColor="@color/colorForeground"
                    android:textSize="@dimen/text_value"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_label_tdee"
                    android:textColor="@color/colorMuted"
                    android:textSize="@dimen/text_label" />

            </LinearLayout>

        </LinearLayout>

        <!-- Scrollable food + drinks sections -->
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Food section header -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/spacing_lg"
                    android:paddingEnd="@dimen/spacing_lg"
                    android:paddingTop="@dimen/spacing_lg"
                    android:paddingBottom="@dimen/spacing_sm">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/main_label_food"
                        android:textColor="@color/colorForeground"
                        android:textSize="@dimen/text_body" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_button_add"
                        android:textColor="@color/colorForeground"
                        android:textSize="28sp"
                        android:clickable="true"
                        android:focusable="true"
                        android:onClick="onAddFoodClick" />

                </LinearLayout>

                <!-- RecyclerView for food -->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/main_recyclerview_food"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false" />

                <!-- Drinks section header -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/spacing_lg"
                    android:paddingEnd="@dimen/spacing_lg"
                    android:paddingTop="@dimen/spacing_lg"
                    android:paddingBottom="@dimen/spacing_sm">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/main_label_drinks"
                        android:textColor="@color/colorForeground"
                        android:textSize="@dimen/text_body" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_button_add"
                        android:textColor="@color/colorForeground"
                        android:textSize="28sp"
                        android:clickable="true"
                        android:focusable="true"
                        android:onClick="onAddDrinkClick" />

                </LinearLayout>

                <!-- RecyclerView for drinks -->
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/main_recyclerview_drinks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false" />

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <!-- Bottom buttons row: Undo + Consume -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="@dimen/spacing_lg"
            android:paddingEnd="@dimen/spacing_lg"
            android:paddingBottom="32dp">

            <LinearLayout
                android:id="@+id/main_button_undo"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:layout_marginEnd="@dimen/spacing_sm"
                android:background="@drawable/button_secondary"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onUndoClick">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_button_undo"
                    android:textColor="@color/colorForeground"
                    android:textSize="@dimen/text_button" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/main_button_consume"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_height"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/spacing_sm"
                android:background="@drawable/button_primary"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:onClick="onConsumeClick">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_button_consume"
                    android:textColor="@color/colorPrimaryForeground"
                    android:textSize="@dimen/text_button" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</layout>
