<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <data>

        <variable
            name="user"
            type="ludwig.samuel.thinn.data.User" />

        <variable
            name="stats"
            type="ludwig.samuel.thinn.data.Stats" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:elevation="10dp"
                app:cardBackgroundColor="@color/colorAccent"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/fragment_main_cal_consumed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{String.valueOf(stats.caloriesConsumed)}"
                        android:textColor="@color/colorDark"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_label_cal_consumed"
                        android:textAllCaps="true"
                        android:textColor="@color/colorDark" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:elevation="10dp"
                app:cardBackgroundColor="@color/colorAccent"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/fragment_main_cal_left"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{String.valueOf(stats.caloriesLeft)}"
                        android:textColor="@color/colorDark"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_label_cal_left"
                        android:textAllCaps="true"
                        android:textColor="@color/colorDark" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:elevation="10dp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/fragment_main_daily_cal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{String.valueOf(user.dailyCalories)}"
                        android:textColor="@color/colorDark"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_label_cal_daily"
                        android:textAllCaps="true"
                        android:textColor="@color/colorDark" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:elevation="10dp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/fragment_main_cal_delta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{String.valueOf(user.delta)}"
                        android:textColor="@color/colorDark"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/fragment_main_label_cal_delta"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_label_cal_deficit"
                        android:textAllCaps="true"
                        android:textColor="@color/colorDark" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:elevation="10dp"
                app:cardBackgroundColor="@color/colorPrimary"
                app:cardCornerRadius="5dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/fragment_main_tdee"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{String.valueOf(user.tdee)}"
                        android:textColor="@color/colorDark"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/main_label_tdee"
                        android:textAllCaps="true"
                        android:textColor="@color/colorDark" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>


        <android.support.v7.widget.RecyclerView
            android:id="@+id/fragment_main_recylcerview_common_meals"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">


        </android.support.v7.widget.RecyclerView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:orientation="horizontal">

                <android.support.v7.widget.CardView
                    android:id="@+id/fragment_main_button_undo"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="0.25"
                    app:cardBackgroundColor="@color/colorPrimary"
                    app:cardCornerRadius="5dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/main_button_undo"
                        android:textAllCaps="true"
                        android:textColor="@color/colorDark" />

                </android.support.v7.widget.CardView>


                <EditText
                    android:id="@+id/fragment_main_cal_to_consume"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="0.75"
                    android:background="@drawable/edittext_rounded"
                    android:inputType="number"
                    android:padding="5dp"
                    android:textAlignment="center"
                    android:textSize="30sp" />

                <android.support.v7.widget.CardView
                    android:id="@+id/fragment_main_button_consume"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="0.25"
                    app:cardBackgroundColor="@color/colorPrimary"
                    app:cardCornerRadius="5dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/main_button_consume"
                        android:textAllCaps="true"
                        android:textColor="@color/colorDark" />

                </android.support.v7.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>